kubernetes/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2024-08-05T06:36:00Z"
  labels:
    app: mealie
  name: mealie
  namespace: mealie
spec:
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: mealie
  type: LoadBalancer
